--- a/examples/r/docs/walkthrough.rmd
+++ b/examples/r/docs/walkthrough.rmd
@@ -49,6 +49,10 @@ remotes::install_github("mrcieu/gwasvcf", force=TRUE)
 
 Note that docker images are available for some of these packages also - https://hub.docker.com/u/mrcieu
 
+``` bash
+sudo docker run --rm -it -v $(pwd):/workspace -w /workspace mrcieu/opengwas-r R
+```
+
 ## Authenticating to access OpenGWAS
 
 1. Visit here: https://api.opengwas.io/
@@ -69,30 +73,27 @@ For this analysis you need to extract a region of interest from two traits and t
 
 ```{r}
 library(ieugwasr)
+library(gwasvcf)
 library(gwasglue)
 library(dplyr)
-library(gassocplot)
-library(genetics.binaRies)
 library(coloc)
-set_bcftools()
+library(ggplot2)
+set_bcftools("bcftools")
 ```
 
-
-
-
-We'll look at a variant associating with LDL cholesterol levels and coronary heart disease. 
+We'll look at a variant associating with LDL cholesterol levels and coronary heart disease. First download the VCF files:
 
 ```{r}
 links <- gwasinfo_files(c("ieu-a-300", "ieu-a-7"))
 sapply(unlist(links), function(x) {
     download.file(x, basename(x))
 })
-
 ```
 
-First get a list of top hits for LDL cholesterol:
+Get a list of top hits for LDL cholesterol:
 
 ```{r}
+readRenviron("env")
 top <- ieugwasr::tophits('ieu-a-300') %>% arrange(p)
 top
 ```
@@ -104,36 +105,29 @@ chrpos <- paste0(top$chr[1], ":", top$position[1] - 90000, "-", top$position[1] 
 chrpos
 ```
 
-Extract the data from LDL and CHD
+Extract the data from LDL and CHD, and format it for coloc:
 
 ```{r}
-out <- gwasvcf_to_coloc(id1='ieu-a-300', id2='ieu-a-7', chrompos=chrpos)
-library(gwasvcf)
-a <- gwasvcf::query_gwas(vcf="ieu-a-300.vcf.gz", chrompos=chrpos)
-
 vout <- gwasvcf_to_coloc("ieu-a-300.vcf.gz", "ieu-a-7.vcf.gz", chrpos)
+str(vout)
 ```
+
+Perform coloc:
 
 ```{r}
-id1 <- 'ieu-a-300'
-tab1 <- ieugwasr::associations(id = id1, variants = chrpos)
-
-
-
-%>% 
-        subset(., !duplicated(rsid))
+vres <- coloc::coloc.abf(vout[[1]], vout[[2]])
+str(vres)
 ```
 
+Plot the region:
 
 ```{r}
-res <- coloc::coloc.abf(out[[1]], out[[2]])
+p <- bind_rows(
+    tibble(z = abs(vout[[1]]$z), pos = vout[[1]]$pos, trait = "LDL cholesterol"),
+    tibble(z = abs(vout[[2]]$z), pos = vout[[2]]$pos, trait = "Coronary heart disease")
+) %>%
+    ggplot(aes(x = pos, y = z)) +
+        geom_point() +
+        facet_grid(trait ~ ., scales = "free_y")
+ggsave(p, file="ldl_chd.png", width = 8, height = 8)
 ```
-
-
-
-
-
-
-
-
-
